# wall-e

./: .gitignore
docker/wall-e-pi-xcompile/: Dockerfile  README.md  colcon-aarch64  run  x-compile
ros/wall_e_control/: CMakeLists.txt  package.xml
ros/wall_e_control/config/: audio.yaml  kinematics.yaml  roboclaw.yaml  servo.yaml
ros/wall_e_control/include/wall_e_control/: .gitkeep
ros/wall_e_control/include/wall_e_control/kinematics/: common.hpp  diff_drive.hpp  transform2d.hpp  twist2d.hpp  vector2d.hpp
ros/wall_e_control/launch/: wall_e.launch.xml
ros/wall_e_control/src/kinematics/: common.cpp  diff_drive.cpp  transform2d.cpp  twist2d.cpp  vector2d.cpp
ros/wall_e_control/src/nodes/: wall_e_arduino.py  wall_e_audio.py  wall_e_jsp.cpp  wall_e_kinematics.cpp
ros/wall_e_control/wall_e/: __init__.py  arduino_device.py  movements.py  servos.py
ros/wall_e_description/: CMakeLists.txt  package.xml
ros/wall_e_description/config/: wall_e.rviz
ros/wall_e_description/launch/: wall_e_description.launch.py
ros/wall_e_description/meshes/: arm-left.stl  arm-right.stl  body.stl  drivetrain-left.stl  drivetrain-right.stl  eye-left.stl  eye-right.stl  hand-left.stl  hand-right.stl  head-center.stl  neck-bottom.stl  neck-top.stl  track-left.stl  track-right.stl  tread-left.stl  tread-right.stl  wheel-left.stl  wheel-right.stl
ros/wall_e_description/urdf/: wall_e.urdf.xacro
ros/wall_e_interfaces/: CMakeLists.txt  package.xml
ros/wall_e_interfaces/msg/: ArduinoStatus.msg  BatteryLevel.msg  ButtonStatus.msg  DriveMotorSpeed.msg
ros/wall_e_interfaces/msg/battery/: BatteryLevel.msg
ros/wall_e_interfaces/msg/servo/: ServoPosition.msg  ServoPositions.msg
ros/wall_e_interfaces/srv/: ArduinoIntCommand.srv
ros/wall_e_interfaces/srv/audio/: GetSounds.srv  PlaySound.srv  SetVolume.srv
ros/wall_e_interfaces/srv/servo/: MoveArms.srv  MoveEyes.srv  MoveHead.srv  MoveServo.srv  PlayAnimation.srv
udev/: 99-wall-e.rules  README.md
wall-e/: wall-e.ino
